--- a/package.json
+++ b/package.json
@@ -24,9 +24,12 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/typeorm": "^9.0.1",
+    "express-session": "^1.17.3",
+    "mssql": "^9.0.1",
     "mysql2": "^3.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
+    "svg-captcha": "^1.4.0",
     "typeorm": "^0.3.11"
   },
   "devDependencies": {
@@ -34,6 +37,7 @@
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
     "@types/express": "^4.17.13",
+    "@types/express-session": "^1.17.5",
     "@types/jest": "29.2.4",
     "@types/node": "18.11.18",
     "@types/supertest": "^2.0.11",
