jwt-token认证实现,注册接口联调

--- a/package.json
+++ b/package.json
@@ -21,12 +21,15 @@
   },
   "dependencies": {
     "@nestjs/common": "^9.0.0",
+    "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/jwt": "^10.0.1",
     "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/typeorm": "^9.0.1",
+    "@types/dotenv": "^8.2.0",
+    "dotenv": "^16.0.3",
     "express-session": "^1.17.3",
     "mssql": "^9.0.1",
     "mysql2": "^3.0.0",
